# Soul-Collector

./: .gitignore  CMakeLists.txt  Makefile  README.html  README.md  README.txt  build.sh  main.cpp  passphrase.txt
Back End/: Activatable.cpp  Activatable.h  Drawable.cpp  Drawable.h  Movable.cpp  Movable.h
Chris Lawyer/: Enemy.cpp  Enemy.h  Player.cpp  Player.h  main.cpp
Layouts/: Help Menu Layout.xlsx
Mustafa/: main.cpp  player.cpp  player.h
Player Class mqw5130/: Player.cpp  Player.h  main.cpp
SCollector/: SCollector.sln  UpgradeLog.XML  UpgradeLog.htm
SCollector/SCollector/: .Game.cpp.swp  .Level.cpp.swp  Activatable.cpp  Activatable.h  AnimManager.cpp  AnimManager.h  AttackBox.cpp  AttackBox.h  AttackCone.cpp  AttackCone.h  CircleMove.cpp  Demon.cpp  Demon.h  Door.cpp  Door.h  Entity.cpp  Entity.h  FuelCanister.cpp  FuelCanister.h  Game.cpp  Game.h  HUD.cpp  HUD.h  HealthPot.cpp  HealthPot.h  HudObject.cpp  HudObject.h  Inventory.cpp  Inventory.h  Key.cpp  Key.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  LightOverlay.cpp  LightOverlay.h  LightSource.cpp  LightSource.h  Main.cpp  (+23 more)
SCollector/SCollectorSetup/: License.rtf  Product.wxs  SCollectorSetup.wixproj
SCollector/Setup1/: Setup1.vdproj
SFGUI-0.1.0/lib/: sfgui-d.lib  sfgui.lib
SFML-2-19-2012/doc/: sfml.chm
SFML-2-19-2012/lib/: sfml-audio-d.lib  sfml-audio-s-d.lib  sfml-audio-s.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network-s-d.lib  sfml-network-s.lib  sfml-network.lib  sfml-system-d.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-system.lib  sfml-window-d.lib  sfml-window-s-d.lib  sfml-window-s.lib  sfml-window.lib
SFML-4-22-2013/lib/: sfml-audio-d.lib  sfml-audio.lib  sfml-graphics.lib  (+9 more)
Tests/: UnitTest.txt
imgsrc/: Door.xcf  Icon.xcf  Key.xcf  ObjectTiles.xcf  Player.xcf  Soul.xcf  Stairs.xcf  logo.xcf  tileset.xcf  zombie_topdown.xcf
spec/: Decomp.vsd  GaemDiag.vsd  Soul Collector.docx  Soul Collector.odt  System Test.docx  Unit Test.docx  class_diagram.vsd  ~WRL0005.tmp  ~WRL2841.tmp  ~WRL4071.tmp
(+177 files in other folders)
